deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server-fridge-service
  namespace: fridge
spec:
  selector:
    app: server-fridge
  ports:
  - port: 80
    targetPort: 8000
